fix(breadcrumbs): update public API to use maxItems instead of collapsing individual breadcrumbs

--- a/core/src/components/breadcrumb/breadcrumb.md.scss
+++ b/core/src/components/breadcrumb/breadcrumb.md.scss
@@ -72,3 +72,21 @@
 :host(.breadcrumb-active) ::slotted(ion-icon) {
   color: #222d3a;
 }
+
+
+// Breadcrumbs Collapsed Indicator
+// --------------------------------------------------
+
+.breadcrumbs-collapsed-indicator {
+  @include border-radius(2px);
+
+  background: #eef1f3;
+}
+
+.breadcrumbs-collapsed-indicator:hover {
+  opacity: 0.7;
+}
+
+.breadcrumbs-collapsed-indicator:focus {
+  background: #dfe5e8;
+}
