--- a/core/src/components/breadcrumb/breadcrumb.scss
+++ b/core/src/components/breadcrumb/breadcrumb.scss
@@ -104,3 +104,36 @@
   //   opacity: var(--background-focused-opacity);
   // }
 }
+
+// Breadcrumbs: Collapsed Indicator
+// --------------------------------------------------
+
+.breadcrumbs-collapsed-indicator {
+  @include padding(0);
+  @include margin(0, 14px);
+
+  display: flex;
+
+  flex: 1 1 100%;
+
+  align-items: center;
+  justify-content: center;
+
+  width: 32px;
+  height: 18px;
+
+  border: 0;
+
+  outline: none;
+
+  cursor: pointer;
+  appearance: none;
+}
+
+.breadcrumbs-collapsed-indicator ion-icon {
+  margin-top: 1px;
+
+  color: #73849a;
+
+  font-size: 22px;
+}
