--- a/core/src/components/breadcrumb/breadcrumb.ios.scss
+++ b/core/src/components/breadcrumb/breadcrumb.ios.scss
@@ -82,3 +82,21 @@
 :host(.breadcrumb-active) ::slotted(ion-icon) {
   color: #242d39;
 }
+
+
+// Breadcrumbs Collapsed Indicator
+// --------------------------------------------------
+
+.breadcrumbs-collapsed-indicator {
+  @include border-radius(4px);
+
+  background: #e9edf3;
+}
+
+.breadcrumbs-collapsed-indicator:hover {
+  opacity: 0.45;
+}
+
+.breadcrumbs-collapsed-indicator:focus {
+  background: #d9e0ea;
+}
