--- a/core/src/components/breadcrumb/breadcrumb.scss
+++ b/core/src/components/breadcrumb/breadcrumb.scss
@@ -5,7 +5,7 @@
 
 :host {
  /**
-   * @prop --color: Color of the breadcrumb
+   * @prop --color: Text color of the breadcrumb
    */
   display: flex;
 
