--- a/core/src/components/button/test/outline/index.html
+++ b/core/src/components/button/test/outline/index.html
@@ -90,6 +90,14 @@
         <ion-button fill="outline" class="ion-focused" color="dark">Dark.focused</ion-button>
         <ion-button fill="outline" class="ion-activated ion-focused" color="dark">Dark.activated.focused</ion-button>
       </p>
+
+      <p>
+        <ion-button fill="outline" color="dark" style="--background-hover: green; --background-hover-opacity: 0.5">Custom</ion-button>
+        <ion-button fill="outline" class="ion-activated" color="dark" style="--background-activated: green; --background-activated-opacity: 0.7">Custom.activated</ion-button>
+        <ion-button fill="outline" class="ion-focused" color="dark" style="--background-focused: green; --background-focused-opacity: 0.9">Custom.focused</ion-button>
+        <ion-button fill="outline" class="ion-activated ion-focused" color="dark" style="--background-focused: green; --background-focused-opacity: 0.9; --background-activated: green; --background-activated-opacity: 0.7">Custom.activated.focused</ion-button>
+      </p>
+
       <p>
         <ion-button fill="outline" disabled>Disabled</ion-button>
         <ion-button fill="outline" color="secondary" disabled>Secondary Disabled</ion-button>
