--- a/core/src/components/button/test/clear/index.html
+++ b/core/src/components/button/test/clear/index.html
@@ -94,6 +94,10 @@
         <ion-button fill="clear" disabled>Disabled</ion-button>
         <ion-button fill="clear" color="secondary" disabled>Secondary Disabled</ion-button>
       </p>
+
+      <p>
+        <ion-button fill="clear" color="danger" style="--background-hover: green; --background-hover-opacity: 0.5">Clear + Danger + Custom Styles</ion-button>
+      </p>
     </ion-content>
 
   </ion-app>
