--- a/core/src/components/item/item.md.vars.scss
+++ b/core/src/components/item/item.md.vars.scss
@@ -145,7 +145,10 @@ $item-md-icon-slot-margin-start:            null !default;
 $item-md-icon-start-slot-margin-start:      null !default;
 
 /// @prop - Margin end for an icon in the start slot
-$item-md-icon-start-slot-margin-end:        8px !default;
+$item-md-icon-start-slot-margin-end:        32px !default;
+
+/// @prop - Margin end for an icon in the start slot
+$item-md-input-icon-start-slot-margin-end:  8px !default;
 
 /// @prop - Margin start for an icon in the end slot
 $item-md-icon-end-slot-margin-start:        16px !default;
