--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -5,22 +5,9 @@
 
 :host {
   /**
-   * @prop --padding-top: Top padding of the datetime
-   * @prop --padding-end: Right padding if direction is left-to-right, and left padding if direction is right-to-left of the datetime
-   * @prop --padding-bottom: Bottom padding of the datetime
-   * @prop --padding-start: Left padding if direction is left-to-right, and right padding if direction is right-to-left of the datetime
-   *
-   * @prop --placeholder-color: Color of the datetime placeholder
-   *
    * @prop --background: The primary background of the datetime component.
-   * @prop --background-secondary: The secondary background of the datetime component. This is the background of the header in the date picker and the dial and inputs in the time picker.
-   * @prop --background-active: The background of the active interactive components. This is the selected date in the date picker. In the time picker this is the active input and active AM/PM button.
+   * @prop --background-rgb: The primary background of the datetime component in RGB format.
    * @prop --title-color: The text color of the title.
-   * @prop --color: The primary body text color.
-   * @prop --color-secondary: The color for the days of the week, next and previous buttons, and the AM/PM buttons.
-   * @prop --color-active: The text color of any active text. Applies to the "today" date in the calendar picker. In the time picker this applies to the active input and active AM/PM buttons.
-   * @prop --dial-color:  The color of the text that is selected by the dial in the time picker.
-   * @prop --dial-background: The background of the dial and arm in the time picker.
    */
 
   display: flex;
@@ -386,38 +373,6 @@
   min-width: 50px;
 }
 
-
-
-
-
 :host(.in-item) {
   position: static;
-}
-
-:host(.datetime-placeholder) {
-  color: var(--placeholder-color);
-}
-
-:host(.datetime-disabled) {
-  opacity: .3;
-  pointer-events: none;
-}
-
-:host(.datetime-readonly) {
-  pointer-events: none;
-}
-
-.datetime-text {
-  @include text-inherit();
-
-  @include rtl() {
-    direction: rtl;
-  }
-
-  flex: 1;
-
-  min-height: inherit;
-
-  direction: ltr;
-  overflow: inherit;
 }
