--- a/core/src/components/item/item.ios.scss
+++ b/core/src/components/item/item.ios.scss
@@ -88,6 +88,11 @@
   --show-inset-highlight: 0;
 }
 
+.item-highlight,
+.item-inner-highlight {
+  transition: none;
+}
+
 
 // iOS Item Slots
 // --------------------------------------------------
