--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -110,8 +110,10 @@
   @include margin-horizontal($item-md-end-slot-margin-start, $item-md-end-slot-margin-end);
 }
 
-:host(.item-fill-solid, .item-fill-outline) ::slotted([slot="start"]),
-:host(.item-fill-solid, .item-fill-outline) ::slotted([slot="end"]) {
+:host(.item-fill-solid) ::slotted([slot="start"]),
+:host(.item-fill-solid) ::slotted([slot="end"]),
+:host(.item-fill-outline) ::slotted([slot="start"]),
+:host(.item-fill-outline) ::slotted([slot="end"]) {
   align-self: center;
 }
 
@@ -141,7 +143,8 @@
   @include margin-horizontal($item-md-icon-end-slot-margin-start, $item-md-icon-end-slot-margin-end);
 }
 
-:host(.item-fill-solid, .item-fill-outline) ::slotted(ion-icon[slot="start"]) {
+:host(.item-fill-solid) ::slotted(ion-icon[slot="start"]),
+:host(.item-fill-outline) ::slotted(ion-icon[slot="start"]) {
   @include margin-horizontal($item-md-icon-start-slot-margin-start, $item-md-input-icon-start-slot-margin-end);
 }
 
@@ -332,25 +335,6 @@
   border-bottom-color: var(--highlight-color-focused);
 }
 
-:host(.item-fill-solid) .item-native .item-highlight {
-  transform: scaleX(0);
-
-  transition: opacity 200ms, transform 200ms;
-
-  opacity: 0;
-}
-
-:host(.item-fill-solid.item-has-focus) .item-native .item-highlight {
-  @include overlay;
-  transform: scaleX(1);
-
-  border-bottom-width: calc(var(--highlight-height) - 1px);
-  border-bottom-style: var(--border-style);
-  border-bottom-color: var(--highlight-color-focused);
-
-  opacity: 1;
-}
-
 :host(.item-fill-solid.item-shape-round) {
   @include border-radius(16px, 16px, 0, 0);
 }
@@ -370,7 +354,7 @@
   --native-padding-left: 16px;
 
   @include border-radius(4px);
-  border: none;
+  // border: none;
 }
 
 :host(.item-fill-outline) .item-native:hover {
@@ -387,23 +371,6 @@
   @include padding-horizontal(32px, null);
 }
 
-// Material Design Item: Highlight and Notched Outline
-// --------------------------------------------------
-
-:host(.item-fill-outline) .item-native .item-highlight {
-  @include overlay;
-  
-  border-width: var(--border-width);
-  border-style: var(--border-style);
-  border-color: var(--border-color);
-
-  z-index: 2;
-}
-
-:host(.item-fill-outline.item-has-focus) .item-native .item-highlight {
-  border-width: var(--highlight-height);
-  border-color: var(--highlight-color-focused);
-}
 
 :host(.item-fill-outline.item-has-focus) .item-native ::slotted(ion-input:not(:first-child)),
 :host(.item-fill-outline.item-has-value) .item-native ::slotted(ion-input:not(:first-child)),
@@ -412,17 +379,21 @@
   transform: translateY(-25%);
 }
 
-:host(.item-fill-outline.item-has-focus) .item-native .item-highlight {
-  border-width: var(--highlight-height);
-}
-
 // Material Design Item: Invalid
 // --------------------------------------------------
 
-:host(.ion-invalid) .item-native,
-:host(.ion-invalid) .item-native .item-highlight,
-:host(.ion-invalid.item-has-focus) .item-native,
-:host(.ion-invalid.item-has-focus) .item-native .item-highlight {
+:host(.item-fill-solid.ion-invalid) .item-native,
+:host(.item-fill-solid.ion-invalid) .item-native .item-highlight,
+:host(.item-fill-solid.ion-invalid.item-has-focus) .item-native,
+:host(.item-fill-solid.ion-invalid.item-has-focus) .item-native .item-highlight {
+  border-color: var(--highlight-color-invalid);
+  caret-color: var(--highlight-color-invalid);
+}
+
+:host(.item-fill-outline.ion-invalid) .item-native,
+:host(.item-fill-outline.ion-invalid) .item-native .item-highlight,
+:host(.item-fill-outline.ion-invalid.item-has-focus) .item-native,
+:host(.item-fill-outline.ion-invalid.item-has-focus) .item-native .item-highlight {
   border-color: var(--highlight-color-invalid);
   caret-color: var(--highlight-color-invalid);
 }
