--- a/core/src/components/breadcrumb/breadcrumb.vars.scss
+++ b/core/src/components/breadcrumb/breadcrumb.vars.scss
@@ -4,7 +4,10 @@
 // --------------------------------------------------
 
 /// @prop - Font weight of the breadcrumb
-$breadcrumb-font-weight:    400 !default;
+$breadcrumb-font-weight:         400 !default;
 
 /// @prop - Font size of the breadcrumb
-$breadcrumb-font-size:      16px !default;
+$breadcrumb-font-size:           16px !default;
+
+/// @prop - Color of the breadcrumb separator
+$breadcrumb-separator-color:     var(--ion-color-step-550, #73849a) !default;
