--- a/core/src/components/searchbar/searchbar.ios.scss
+++ b/core/src/components/searchbar/searchbar.ios.scss
@@ -181,7 +181,7 @@
 }
 
 :host-context(ion-toolbar.ion-color):not(.ion-color) .searchbar-input {
-  background: #{current-color(contrast, $searchbar-ios-input-background-color-alpha)};
+  background: rgba(var(--ion-color-contrast-rgb), $searchbar-ios-input-background-color-alpha);
   color: currentColor;
 }
 
