--- a/core/src/components/breadcrumbs/test/basic/index.html
+++ b/core/src/components/breadcrumbs/test/basic/index.html
@@ -61,6 +61,31 @@
 
       <hr>
 
+      <h1>No Links</h1>
+
+      <ion-breadcrumbs>
+        <ion-breadcrumb>
+          Home
+        </ion-breadcrumb>
+        <ion-breadcrumb>
+          Electronics
+        </ion-breadcrumb>
+        <ion-breadcrumb>
+          Photography
+        </ion-breadcrumb>
+        <ion-breadcrumb>
+          Cameras
+        </ion-breadcrumb>
+        <ion-breadcrumb>
+          Film
+        </ion-breadcrumb>
+        <ion-breadcrumb>
+          35 mm
+        </ion-breadcrumb>
+      </ion-breadcrumbs>
+
+      <hr>
+
       <h1>Color: Primary</h1>
 
       <ion-breadcrumbs color="primary">
